# aiidkit_llm

./: .gitignore  EnvPreparationCommands.txt  README.md  pyproject.toml  requirements.txt  research-env.def  research-env.sbatch
configs/: discriminative_classic_ml.yaml  discriminative_training.yaml  generative_training.yaml
configs/GNNS/: HeteroGAT.yaml  HeteroGATEvidential.yaml  HeteroGATEvidentialOptuna.yaml  HeteroGATOptuna.yaml  HeteroGraphSage.yaml  HeteroGraphSageEvidential.yaml  HeteroGraphSageEvidentialOptuna.yaml  HeteroGraphSageOptuna.yaml  SimpleHeteroGNN_TEAV.yaml  SimpleHeteroGNN_TEAV_Evidential.yaml  SimpleHeteroGNN_TEAV_Evidential_Optuna.yaml  SimpleHeteroGNN_TEAV_Optuna.yaml
configs/GNNs/ContinualLearning/: SimpleHeteroGNN.yaml  SimpleHeteroGNN_NoMemory.yaml  SimpleHeteroGNN_Random.yaml  SimpleHeteroGNN_SImS.yaml  SimpleHeteroGNN_UQ.yaml
configs/GNNs/Cutoff-0/PredHorizon-30/HeteroGAT/: HeteroGAT.yaml  HeteroGATEvidential_Optuna.yaml  HeteroGAT_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-30/HeteroGraphSage/: HeteroGraphSage.yaml  HeteroGraphSageEvidential.yaml  HeteroGraphSageEvidential_Optuna.yaml  HeteroGraphSage_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-30/SimpleHeteroGnn/: SimpleHeteroGNN.yaml  SimpleHeteroGNNEvidential.yaml  SimpleHeteroGNNEvidential_Optuna.yaml  SimpleHeteroGNN_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-60/HeteroGAT/: HeteroGAT_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-60/HeteroGraphSage/: HeteroGraphSage.yaml  HeteroGraphSageEvidential_Optuna.yaml  HeteroGraphSage_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-60/SimpleHeteroGnn/: SimpleHeteroGNN.yaml  SimpleHeteroGNNEvidential.yaml  SimpleHeteroGNNEvidential_Optuna.yaml  SimpleHeteroGNN_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-90/HeteroGAT/: HeteroGAT_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-90/HeteroGraphSage/: HeteroGraphSage.yaml  HeteroGraphSageEvidential_Optuna.yaml  HeteroGraphSage_Optuna.yaml
configs/GNNs/Cutoff-0/PredHorizon-90/SimpleHeteroGnn/: SimpleHeteroGNN.yaml  SimpleHeteroGNNEvidential.yaml  SimpleHeteroGNNEvidential_Optuna.yaml  SimpleHeteroGNN_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-30/HeteroGAT/: HeteroGAT.yaml  HeteroGATEvidential_Optuna.yaml  HeteroGAT_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-30/HeteroGraphSage/: HeteroGraphSage.yaml  HeteroGraphSageEvidential_Optuna.yaml  HeteroGraphSage_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-30/SimpleHeteroGnn/: SimpleHeteroGNN.yaml  SimpleHeteroGNNEvidential_Optuna.yaml  SimpleHeteroGNN_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-60/HeteroGAT/: HeteroGAT_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-60/HeteroGraphSage/: HeteroGraphSage.yaml  HeteroGraphSageEvidential_Optuna.yaml  HeteroGraphSage_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-60/SimpleHeteroGnn/: SimpleHeteroGNN.yaml  SimpleHeteroGNNEvidential_Optuna.yaml  SimpleHeteroGNN_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-90/HeteroGAT/: HeteroGAT_Optuna.yaml
configs/GNNs/Cutoff-180/PredHorizon-90/HeteroGraphSage/: HeteroGraphSage.yaml  HeteroGraphSageEvidential_Optuna.yaml  (+1 more)
notebooks/DataManipulation/: TEAVPatientsGraphs.ipynb
scoping_review/: analysis.py  mappings.py  scoping_review_query.py
scripts/: compare_models.py  create_patient_datasets.py  create_patient_graph_dataset.py  interpret_models.py  optuna_tuning.sh  pretrain_token_model.py  script_utils.py  stratify_models.py  train_classic_ml.py  train_classification.py  train_generative.py  train_mlm.py  train_optuna.py  train_plots.py
scripts/scoping_review/: analysis.py  convert_plots.py  scope_module.py
src/: constants.py  utils.py
src/data/: patient_dataset.py
src/data/preprocess/: clinical_objects.py
src/data/process/: graph_patient_dataset.py  infection_task.py  patient_dataset.py
src/evaluation/: evaluate_models.py  plot_results.py
src/experiments/: GenericExperiment.py
src/experiments/GNNs/: InfectionRiskPrediction.py  InfectionRiskPredictionContinualLearning.py
src/experiments/Utils/: EvidentialClassification.py  classification_metrics.py  plot_metrics.py  plot_metrics_CL.py  tools.py  uncertainty_quantification.py
src/model/: evaluate_models.py  model_utils.py  patient_embedder.py
src/model/GraphBased/: AiidkitTEAVGraphEmbedder.py  HeteroGAT.py  HeteroGNN.py  HeteroGraphSage.py
src/model/TransformedBased/: evaluate_models.py  model_utils.py  patient_sequence_embedder.py  patient_token_embedder.py
(+98 files in other folders)
